Improved SDK changelogs (#788)
* bongo: rough first pass on getting a consolidated commit history across nested dependencies

* bongo: add changelog entry

* bongo: finished initial implementation of creating a consolidated commit history for a package given a range of versions.

Some specifics:
- wired up expansion of auto commit entries to `gitLog`
- when expanding auto commit entries, made it so only commit histories for `dependencies`
and local packages are found (`devDependencies` and external packages are ignored)
- only unique entries are returned

* bongo: add support for external deps to git log

Made it so external dep bumps get their own entry in the git log output
(same as what is entered into a changelog as part of yarn upgrade) using
the top-level sha.

Also fixed
- git log so it removes release commits since some could be introduced
  here
- the check for isReleaseCommit so it won't filter out external dep
  update entries

* bongo: remove rogue console.log statement in git log test

* add templated pending-changes.yaml file

* bongo: remove WIP from changelog entry

* fixed pending-changes order to be alphabetical

* bongo: update the internal package lookup used in git to throw if one is not found

* bongo: wired up git log to the cli

* bongo: added an emitter to prepare a changelog entry for all updated deps that uses the new git log functionality. Wired it up to yarn upgrade

* bongo: update the updated dependencies emitter to make the commit history optional, and added an argument to the deps cli command so a package can opt-in

* bongo: add support for interacting with the pending changes yaml file

* bongo: refactored pending-changes code, and wired it up to the cli

as part of this work, added support for prepending entries to the
unreleased section of changelogs

* bongo: fixes needed when verifying e2e

* pending-changes: drop optional --- prefix since it is not preserved when updating the fi

--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -19,8 +19,8 @@
     "cypress:run": "cypress run --config-file test/fixtures/cypress-play.json --spec=test/fixtures/testApp/cypress/integration-play/play.js",
     "cypress:run:new": "node_modules/cypress-new/bin/cypress run --config-file test/fixtures/cypress-play.json --spec=test/fixtures/testApp/cypress/integration-play/play.js",
     "cypress:play": "cd test/fixtures/testApp && cypress run --config integrationFolder=cypress/integration-play,pluginsFile=cypress/plugins/index-play.js,supportFile=cypress/support/index-run.js --spec=cypress/integration-play/play.js",
-    "preversion": "yarn build && bongo preversion --skip-deps",
-    "version": "bongo version",
+    "preversion": "yarn build && bongo preversion --skip-deps --verifyPendingChanges",
+    "version": "bongo version --withPendingChanges",
     "postversion": "bongo postversion --skip-release-notification",
     "deps": "bongo deps",
     "generate:tests": "coverage-tests generate",
