--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -36,8 +36,8 @@
     "changelog:install": "sudo apt-get install git-extras",
     "gh:publish": "gh workflow run publish-storybook.yml --ref $(git rev-parse --abbrev-ref HEAD)",
     "postinstall": "node src/postinstall",
-    "preversion": "bongo preversion",
-    "version": "bongo version",
+    "preversion": "bongo preversion --verifyPendingChanges",
+    "version": "bongo version --withPendingChanges",
     "postversion": "bongo postversion --skip-release-notification",
     "deps": "bongo deps",
     "prepublish:setup": "echo 'setup is a no-op. Move along, nothing to see here.'"
