--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -56,8 +56,8 @@
     "deps": "bongo deps",
     "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='selenium selenium@3' -f links='types test-utils sdk-shared eyes-sdk-core visual-grid-client eyes-api spec-driver-selenium utils driver snippets screenshoter' -f linking-depth=3",
     "gh:publish": "gh workflow run publish-selenium.yml --ref $(git rev-parse --abbrev-ref HEAD)",
-    "preversion": "bongo preversion && yarn build",
-    "version": "bongo version",
+    "preversion": "bongo preversion --verifyPendingChanges && yarn build",
+    "version": "bongo version --withPendingChanges",
     "postversion": "bongo postversion"
   },
   "husky": {
@@ -66,18 +66,18 @@
     }
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.1.6",
-    "@applitools/eyes-sdk-core": "12.24.13",
+    "@applitools/eyes-api": "1.2.0",
+    "@applitools/eyes-sdk-core": "13.1.1",
     "@applitools/spec-driver-selenium": "1.3.3",
-    "@applitools/visual-grid-client": "15.8.60"
+    "@applitools/visual-grid-client": "15.10.1"
   },
   "devDependencies": {
-    "@applitools/api-extractor": "1.2.6",
+    "@applitools/api-extractor": "1.2.7",
     "@applitools/scripts": "1.1.0",
     "@applitools/sdk-coverage-tests": "2.3.18",
-    "@applitools/sdk-release-kit": "0.13.10",
+    "@applitools/sdk-release-kit": "0.13.11",
     "@applitools/sdk-shared": "0.9.11",
-    "@applitools/test-utils": "1.0.10",
+    "@applitools/test-utils": "1.1.5",
     "@types/selenium-webdriver": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
