--- a/packages/sdk-release-kit/package.json
+++ b/packages/sdk-release-kit/package.json
@@ -39,6 +39,8 @@
   "dependencies": {
     "@applitools/utils": "1.2.11",
     "chalk": "3.0.0",
+    "compare-versions": "^4.1.3",
+    "js-yaml": "^4.1.0",
     "lodash.pickby": "4.6.0",
     "micromatch": "4.0.2",
     "node-fetch": "2.6.1",
