--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -16,6 +16,13 @@ jobs:
           node-version: 14
       - run: |
           echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
+          # git diff --quiet leads to no output and an exit code based on the result
+          # when there are no diffs, the exit code is 0 (true)
+          # when there are diffs, the exit code is 1 (false)
+          if git diff --quiet HEAD~ pending-changes.yaml; then
+            echo No updates to pending-changes.yaml detected. Add an entry to this file for the relevant SDKs as part of this PR
+            exit 1
+          fi
           cd packages/
           packages=$(git diff HEAD~ --name-only | cut -d "/" -f 2 | uniq)
           for package in $packages; do
