bongo, actions: add published date to bongo log and changed bongo deps so it only commits when --commit is passed. Updated the test and publish GH action accordingly

--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -41,7 +41,7 @@ runs:
 
         echo "::group::Installing and updating dependencies"
         yarn install
-        npm run deps --if-present
+        npm run deps --if-present -- --commit
         echo "::endgroup::"
 
         echo "::group::Building package"
