--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -14,14 +14,8 @@ Apollo SDK:
   feature:
     - `runner.getAllTestResults` returns the corresponding UFG browser/device configuration for each test. This is available as `runner.getAllTestResults()[i].browserInfo`.
   bug-fix:
-<<<<<<< HEAD
     - Support batchId, batchName and batchSequenceName from the config file, eyesOpen and environment variables
 "@applitools/eyes-nightwatch":
-=======
-    - `runner.getAllTestResults` now aborts unclosed tests
-    - `runner.getAllTestResults` now returns all results, including aborted tests
-"@applitools/eyes-webdriverio":
->>>>>>> master
   feature:
     - `runner.getAllTestResults` returns the corresponding UFG browser/device configuration for each test. This is available as `runner.getAllTestResults()[i].browserInfo`.
   bug-fix:
@@ -68,6 +62,7 @@ Apollo SDK:
     - internal tests updates
   bug-fix:
     - fix Cypress Documentation inaccuracies
+    - Support batchId, batchName and batchSequenceName from the config file, eyesOpen and environment variables
 "@applitools/eyes-storybook":
   feature:
     - 
