--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -8,11 +8,12 @@ Apollo SDK:
     - Remove kitchen to accommodate space for PlayStation
 "@applitools/eyes-universal":
   feature:
-    - 
+    - Support pageCoverage info in Native
   bug-fix:
     - 
 "@applitools/eyes-selenium":
   feature:
+    - Support pageCoverage info in Native
     - >
       `runner.getAllTestResults` returns the corresponding UFG browser/device
       configuration for each test. This is available as
@@ -21,6 +22,7 @@ Apollo SDK:
     - 
 "@applitools/eyes.webdriverio":
   feature:
+    - Support pageCoverage info in Native
     - >
       `runner.getAllTestResults` returns the corresponding UFG browser/device
       configuration for each test. This is available as
@@ -33,6 +35,7 @@ Apollo SDK:
       tests
 "@applitools/eyes-playwright":
   feature:
+    - Support pageCoverage info in Native
     - >
       `runner.getAllTestResults` returns the corresponding UFG browser/device
       configuration for each test. This is available as
@@ -45,6 +48,7 @@ Apollo SDK:
       tests
 "@applitools/eyes-protractor":
   feature:
+    - Support pageCoverage info in Native
     - >
       `runner.getAllTestResults` returns the corresponding UFG browser/device
       configuration for each test. This is available as
@@ -57,6 +61,7 @@ Apollo SDK:
       tests
 "@applitools/eyes-puppeteer":
   feature:
+    - Support pageCoverage info in Native
     - >
       `runner.getAllTestResults` returns the corresponding UFG browser/device
       configuration for each test. This is available as
@@ -69,6 +74,7 @@ Apollo SDK:
       tests
 "@applitools/eyes-testcafe":
   feature:
+    - Support pageCoverage info in Native
     - >
       `runner.getAllTestResults` returns the corresponding UFG browser/device
       configuration for each test. This is available as
@@ -81,6 +87,7 @@ Apollo SDK:
       tests
 "@applitools/eyes-nightwatch":
   feature:
+    - Support pageCoverage info in Native
     - >
       `runner.getAllTestResults` returns the corresponding UFG browser/device
       configuration for each test. This is available as
