Fix shared mutable appliConfFile in cypress (#819)
* fix shared mutable appliConfFile in cypress

* add a unit test to make sure that appliConfFile stays intact for all tests

Co-authored-by: Sophie Tagar <sophietagar@Sophies-MacBook-Pro-2.local>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -77,7 +77,8 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - |
+      Fix config file parameters (e.g. `browser`) not being passed
 "@applitools/eyes-storybook":
   feature:
     - 
