Fix extractText for x, y regions without hints (#835)
* core: update conditional check in extractText when no hint is provided that falls back to an element look up. Check to make sure that the provided region.target is either a selector or an element instead of blindly passing region.target

* add entries to pending-changes

* core: in extractText, restore the check of the hint back to see if it is undefined, to support when an empty string is provided

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -10,18 +10,21 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - |
+      `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
 "@applitools/eyes-selenium":
   feature:
     - |
       `runner.getAllTestResults` returns the corresponding UFG browser/device configuration for each test. This is available as `runner.getAllTestResults()[i].browserInfo`.
   bug-fix:
-    - 
+    - |
+      `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
 "@applitools/eyes-webdriverio":
   feature:
     - 
   bug-fix:
-    - 
+    - |
+      `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
 "@applitools/eyes-playwright":
   feature:
     - |
@@ -31,6 +34,8 @@ Apollo SDK:
       `runner.getAllTestResults` now aborts unclosed tests
     - |
       `runner.getAllTestResults` now returns all results, including aborted tests
+    - |
+      `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
 "@applitools/eyes-protractor":
   feature:
     - |
@@ -40,6 +45,8 @@ Apollo SDK:
       `runner.getAllTestResults` now aborts unclosed tests
     - |
       `runner.getAllTestResults` now returns all results, including aborted tests
+    - |
+      `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
 "@applitools/eyes-puppeteer":
   feature:
     - |
@@ -49,6 +56,8 @@ Apollo SDK:
       `runner.getAllTestResults` now aborts unclosed tests
     - |
       `runner.getAllTestResults` now returns all results, including aborted tests
+    - |
+      `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
 "@applitools/eyes-testcafe":
   feature:
     - |
@@ -58,6 +67,8 @@ Apollo SDK:
       `runner.getAllTestResults` now aborts unclosed tests
     - |
       `runner.getAllTestResults` now returns all results, including aborted tests
+    - |
+      `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
 "@applitools/eyes-nightwatch":
   feature:
     - |
@@ -67,11 +78,14 @@ Apollo SDK:
       `runner.getAllTestResults` now aborts unclosed tests
     - |
       `runner.getAllTestResults` now returns all results, including aborted tests
+    - |
+      `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
 "@applitools/eyes-cypress":
   feature:
     - 
   bug-fix:
-    - 
+    - |
+      `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
 "@applitools/eyes-storybook":
   feature:
     - 
@@ -81,12 +95,14 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - |
+      `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
 eyes-browser-extension:
   feature:
     - 
   bug-fix:
-    - 
+    - |
+      `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
 applitools-for-selenium-ide:
   feature:
     - 
