--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -50,8 +50,8 @@
     "test:e2e": "mocha ./test/e2e/*.spec.ts --exit --no-timeouts -r ts-node/register",
     "deps": "bongo deps",
     "gh:publish": "gh workflow run publish-universal.yml --ref $(git rev-parse --abbrev-ref HEAD)",
-    "preversion": "bongo preversion && yarn build && yarn build:zip && yarn build:tgz",
-    "version": "yarn build && bongo version",
+    "preversion": "bongo preversion --verifyPendingChanges && yarn build && yarn build:zip && yarn build:tgz",
+    "version": "yarn build && bongo version --withPendingChanges",
     "postversion": "bongo postversion"
   },
   "dependencies": {
