all: add bongo, drop sdk-release-kit

--- a/packages/eyes-cypress-legacy/package.json
+++ b/packages/eyes-cypress-legacy/package.json
@@ -52,8 +52,8 @@
     "throat": "6.0.1"
   },
   "devDependencies": {
+    "@applitools/bongo": "^2.0.0",
     "@applitools/scripts": "^1.1.0",
-    "@applitools/sdk-release-kit": "1.2.1",
     "@applitools/snaptdout": "1.0.1",
     "@applitools/test-server": "1.0.8",
     "chai": "^4.2.0",
