--- a/packages/api-extractor/package.json
+++ b/packages/api-extractor/package.json
@@ -42,7 +42,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@applitools/sdk-release-kit": "1.2.1",
+    "@applitools/bongo": "^2.0.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
