--- a/packages/eyes-common-legacy/package.json
+++ b/packages/eyes-common-legacy/package.json
@@ -47,7 +47,7 @@
     "png-async": "^0.9.4"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.2.2",
+    "@applitools/bongo": "^2.0.0",
     "@types/node": "*",
     "mocha": "^6.2.2",
     "typescript": "^3.6.4"
