--- a/packages/eyes-images-legacy/package.json
+++ b/packages/eyes-images-legacy/package.json
@@ -45,7 +45,7 @@
     "eyes.utils": "^3.8.1"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.2.2",
+    "@applitools/bongo": "^2.0.0",
     "@types/node": "*",
     "browserify": "^16.5.0",
     "browserify-fs": "^1.0.0",
