--- a/packages/eyes-playwright-universal/package.json
+++ b/packages/eyes-playwright-universal/package.json
@@ -53,9 +53,9 @@
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.2.3",
+    "@applitools/bongo": "^2.0.0",
     "@applitools/scripts": "1.0.1",
     "@applitools/sdk-coverage-tests": "2.3.16",
-    "@applitools/sdk-release-kit": "1.2.1",
     "@applitools/sdk-shared": "0.9.9",
     "@applitools/test-utils": "1.0.9",
     "@types/ws": "^7.4.4",
