--- a/packages/eyes-puppeteer/package.json
+++ b/packages/eyes-puppeteer/package.json
@@ -68,9 +68,9 @@
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.2.2",
+    "@applitools/bongo": "^2.0.0",
     "@applitools/scripts": "1.0.1",
     "@applitools/sdk-coverage-tests": "2.3.16",
-    "@applitools/sdk-release-kit": "1.2.1",
     "@applitools/sdk-shared": "0.9.8",
     "@applitools/test-utils": "1.0.9",
     "@types/mocha": "^9.0.0",
