--- a/packages/eyes-sdk-core-legacy/package.json
+++ b/packages/eyes-sdk-core-legacy/package.json
@@ -45,7 +45,7 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.2.2",
+    "@applitools/bongo": "^2.0.0",
     "@types/node": "*",
     "mocha": "^6.2.2",
     "typescript": "^3.6.4"
