--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -53,8 +53,8 @@
     "tunnel": "0.0.6"
   },
   "devDependencies": {
+    "@applitools/bongo": "^2.0.0",
     "@applitools/sdk-fake-eyes-server": "2.1.1",
-    "@applitools/sdk-release-kit": "1.2.1",
     "@applitools/spec-driver-selenium": "1.3.3",
     "@applitools/test-utils": "1.1.5",
     "@applitools/visual-grid-client": "15.10.1",
