--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -79,8 +79,8 @@
     "yargs": "15.4.1"
   },
   "devDependencies": {
+    "@applitools/bongo": "^2.0.0",
     "@applitools/scripts": "^1.1.0",
-    "@applitools/sdk-release-kit": "1.2.1",
     "@applitools/sdk-shared": "0.9.11",
     "@applitools/snaptdout": "^1.0.1",
     "@storybook/react": "^6.4.0",
