--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -76,9 +76,9 @@
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.2.7",
+    "@applitools/bongo": "^2.0.0",
     "@applitools/scripts": "1.1.0",
     "@applitools/sdk-coverage-tests": "^2.3.18",
-    "@applitools/sdk-release-kit": "^1.2.1",
     "@applitools/sdk-shared": "0.9.11",
     "@applitools/test-server": "1.0.8",
     "@applitools/test-utils": "1.0.12",
