--- a/packages/eyes-webdriverio-5-service/package.json
+++ b/packages/eyes-webdriverio-5-service/package.json
@@ -24,7 +24,7 @@
     "@applitools/eyes-webdriverio": "5.32.10"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "^1.2.1",
+    "@applitools/bongo": "^2.0.0",
     "@wdio/cli": "5.18.6",
     "@wdio/dot-reporter": "5.18.6",
     "@wdio/local-runner": "5.18.6",
