--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -117,9 +117,9 @@
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.2.7",
+    "@applitools/bongo": "^2.0.0",
     "@applitools/scripts": "1.1.0",
     "@applitools/sdk-coverage-tests": "^2.3.18",
-    "@applitools/sdk-release-kit": "^1.2.1",
     "@applitools/sdk-shared": "0.9.11",
     "@applitools/test-utils": "1.1.5",
     "@types/mocha": "^9.0.0",
