--- a/packages/sdk-fake-eyes-server/package.json
+++ b/packages/sdk-fake-eyes-server/package.json
@@ -49,7 +49,7 @@
     "uuid": "3.3.3"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "^1.2.1",
+    "@applitools/bongo": "^2.0.0",
     "chai": "^4.2.0",
     "eslint": "^7.9.0",
     "eslint-plugin-mocha-no-only": "^1.1.1",
