--- a/packages/spec-driver-playwright/package.json
+++ b/packages/spec-driver-playwright/package.json
@@ -55,8 +55,8 @@
   },
   "devDependencies": {
     "@applitools/api-extractor": "^1.2.3",
+    "@applitools/bongo": "^2.0.0",
     "@applitools/scripts": "1.0.1",
-    "@applitools/sdk-release-kit": "1.2.1",
     "@applitools/test-utils": "1.0.9",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.10.2",
