--- a/packages/spec-driver-webdriverio/package.json
+++ b/packages/spec-driver-webdriverio/package.json
@@ -102,8 +102,8 @@
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.2.7",
+    "@applitools/bongo": "^2.0.0",
     "@applitools/scripts": "1.1.0",
-    "@applitools/sdk-release-kit": "1.2.1",
     "@applitools/test-utils": "1.1.5",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.10.2",
