--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -49,7 +49,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@applitools/sdk-release-kit": "1.2.1",
+    "@applitools/bongo": "^2.0.0",
     "@types/node": "^14.14.7",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
