--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -47,8 +47,8 @@
     "@applitools/jsdom": false
   },
   "devDependencies": {
+    "@applitools/bongo": "^2.0.0",
     "@applitools/dom-snapshot": "4.5.12",
-    "@applitools/sdk-release-kit": "1.2.1",
     "@applitools/test-server": "1.0.8",
     "@applitools/test-utils": "1.1.5",
     "@applitools/utils": "^1.2.13",
