bongo: make restricted (aka private in the npmjs UI)

--- a/packages/bongo/package.json
+++ b/packages/bongo/package.json
@@ -5,7 +5,7 @@
     "node": ">=10.0.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "restricted"
   },
   "directories": {
     "lib": "./src",
