--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -64,6 +64,7 @@
     "yargs": "16.1.0"
   },
   "devDependencies": {
+    "@applitools/bongo": "^2.0.0",
     "@applitools/sdk-coverage-tests": "^2.3.18",
     "@applitools/test-utils": "^1.1.5",
     "@applitools/types": "1.2.2",
