[WIP] Ufg native (#800)
* init

* [vgc] refactor resources related logic

* nove resourceType to the processResources

* initial takeVHS impl

* incorporate user agent into resource object

* rename result to processedResourcesPromise

* revert engine version to 8.9

* fix `getResourceUrlsInCache`

* take vhses

* fix createResourceMapping options

* ufg native impl

* core: fix makePersistance and cleanupPersistance in CheckSettingsUtils so they only run if there are mapping elements present. Fixes 'Method not implemented' error when running on iOS w/o any regions

* vgc: fix unit tests from Kyrylo's refactoring

* test-utils: add sauce ufg native device for ios

* core: update e2e ufg native test to use sauce device

* core: fix iosDeviceInfo in e2e ufg native test

* core: fix renderRequest object logging in ServerConnector

* vgc: replace calls to setter functions that no longer exist in renderInfo

* vgc: only set a browser object if type is web

* vgc: add isEmulation check (replacing the one that was removed)

* vgc: initial pass on updating the FakeEyesWrapper to work with the new renderRequest implementation and resolve unit/integration test failures

* vgc: update createRenderResult unit test for ios native to reflect change to browser

* core: improve object logging in ServerConnector

* ufg native fixes for android

* make android work for ufg native

* try to make ios work in ufg native

* fix vgc e2e ufg tst :)))

* ufg native changelog

* adjustments

* fix createRenderRequest emulation info and refactor a bit

* bring back and improve mapChromeEmulationInfo

* small refactor isDomOrVHS

* avoid multiline in logs for ServerConnector

* fix tests

* fix iosDeviceInfo fields

* update device names

* add injectUFGLib to env

* fix toCheckWindowConfiguration tests

* simplify createResourceMapping

* skip ufg native e2e tests

* cleanup core from unused classes

* fix impor

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -8,11 +8,12 @@ Apollo SDK:
     - Remove kitchen to accommodate space for PlayStation
 "@applitools/eyes-universal":
   feature:
-    - 
+    - Support UFG for native mobile
   bug-fix:
     - 
 "@applitools/eyes-selenium":
   feature:
+    - Support UFG for native mobile
     - |
       `runner.getAllTestResults` returns the corresponding UFG browser/device configuration for each test. This is available as `runner.getAllTestResults()[i].browserInfo`.
   bug-fix:
@@ -21,13 +22,14 @@ Apollo SDK:
     - accept ios and android lowercase as driver platformName capability when using custom grid
 "@applitools/eyes-webdriverio":
   feature:
-    - 
+    - Support UFG for native mobile
   bug-fix:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
     - accept ios and android lowercase as driver platformName capability when using custom grid
 "@applitools/eyes-playwright":
   feature:
+    - Support UFG for native mobile
     - |
       `runner.getAllTestResults` returns the corresponding UFG browser/device configuration for each test. This is available as `runner.getAllTestResults()[i].browserInfo`.
   bug-fix:
@@ -40,6 +42,7 @@ Apollo SDK:
     - accept ios and android lowercase as driver platformName capability when using custom grid
 "@applitools/eyes-protractor":
   feature:
+    - Support UFG for native mobile
     - |
       `runner.getAllTestResults` returns the corresponding UFG browser/device configuration for each test. This is available as `runner.getAllTestResults()[i].browserInfo`.
   bug-fix:
@@ -52,6 +55,7 @@ Apollo SDK:
     - accept ios and android lowercase as driver platformName capability when using custom grid
 "@applitools/eyes-puppeteer":
   feature:
+    - Support UFG for native mobile
     - |
       `runner.getAllTestResults` returns the corresponding UFG browser/device configuration for each test. This is available as `runner.getAllTestResults()[i].browserInfo`.
   bug-fix:
@@ -64,6 +68,7 @@ Apollo SDK:
     - accept ios and android lowercase as driver platformName capability when using custom grid
 "@applitools/eyes-testcafe":
   feature:
+    - Support UFG for native mobile
     - |
       `runner.getAllTestResults` returns the corresponding UFG browser/device configuration for each test. This is available as `runner.getAllTestResults()[i].browserInfo`.
   bug-fix:
@@ -75,6 +80,7 @@ Apollo SDK:
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
 "@applitools/eyes-nightwatch":
   feature:
+    - Support UFG for native mobile
     - |
       `runner.getAllTestResults` returns the corresponding UFG browser/device configuration for each test. This is available as `runner.getAllTestResults()[i].browserInfo`.
   bug-fix:
@@ -98,7 +104,7 @@ Apollo SDK:
     - 
 "@applitools/eyes-webdriverio5-service":
   feature:
-    - 
+    - Support UFG for native mobile
   bug-fix:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
