--- a/packages/spec-driver-selenium/package.json
+++ b/packages/spec-driver-selenium/package.json
@@ -64,6 +64,7 @@
   },
   "devDependencies": {
     "@applitools/api-extractor": "^1.2.6",
+    "@applitools/bongo": "2.0.0",
     "@applitools/scripts": "1.1.0",
     "@applitools/test-utils": "1.0.10",
     "@types/mocha": "^9.0.0",
