Fix normalizeRegion logic in iOS native app (#848)
* dont check for intersection between safeArea and region when user sends navBar or tabBar in region

* consulidate navBar and tabBar to a single variable

* check if region is navBar or tabBar in property selector as well as value

Co-authored-by: Sophie Tagar <sophietagar@Sophies-MacBook-Pro-2.local>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -10,7 +10,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Native iOS, allow capturing NavigationBar and TabBar regions
 "@applitools/eyes-selenium":
   feature:
     - Support UFG for native mobile
@@ -20,6 +20,7 @@ Apollo SDK:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
     - accept ios and android lowercase as driver platformName capability when using custom grid
+    - Native iOS, allow capturing NavigationBar and TabBar regions
 "@applitools/eyes-webdriverio":
   feature:
     - Support UFG for native mobile
@@ -27,6 +28,7 @@ Apollo SDK:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
     - accept ios and android lowercase as driver platformName capability when using custom grid
+    - Native iOS, allow capturing NavigationBar and TabBar regions
 "@applitools/eyes-playwright":
   feature:
     - Support UFG for native mobile
@@ -40,6 +42,7 @@ Apollo SDK:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
     - accept ios and android lowercase as driver platformName capability when using custom grid
+    - Native iOS, allow capturing NavigationBar and TabBar regions
 "@applitools/eyes-protractor":
   feature:
     - Support UFG for native mobile
@@ -53,6 +56,7 @@ Apollo SDK:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
     - accept ios and android lowercase as driver platformName capability when using custom grid
+    - Native iOS, allow capturing NavigationBar and TabBar regions
 "@applitools/eyes-puppeteer":
   feature:
     - Support UFG for native mobile
@@ -66,6 +70,7 @@ Apollo SDK:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
     - accept ios and android lowercase as driver platformName capability when using custom grid
+    - Native iOS, allow capturing NavigationBar and TabBar regions
 "@applitools/eyes-testcafe":
   feature:
     - Support UFG for native mobile
@@ -91,6 +96,7 @@ Apollo SDK:
     - |
       `extractText` now supports regions that don't use hints while using `x`/`y` coordinates
     - accept ios and android lowercase as driver platformName capability when using custom grid
+    - Native iOS, allow capturing NavigationBar and TabBar regions
 "@applitools/eyes-cypress":
   feature:
     - 
