--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -56,6 +56,7 @@
     "@applitools/bongo": "^2.0.0",
     "@applitools/sdk-fake-eyes-server": "2.1.1",
     "@applitools/spec-driver-selenium": "1.3.4",
+    "@applitools/test-server": "^1.0.8",
     "@applitools/test-utils": "1.3.0",
     "@applitools/visual-grid-client": "15.11.1",
     "assert-rejects": "1.0.0",
